syntax = "proto3";

package Microsoft.Telepathy.ProtoBuf;

import "telepathy.proto";
import "google/protobuf/empty.proto";

option go_package = "protos";
option csharp_namespace = "Microsoft.Telepathy.ProtoBuf";

message GetTaskRequest {
    string session_id = 1;
};

enum SessionState {
    RUNNING = 0;
    TEMP_NO_TASK = 1;
    END_TASK = 2;
}

message TaskWrapper {
    InnerTask msg = 1;
    SessionState session_state = 2; 
};

message SendResultRequest {
    string session_id = 1;
    string msg_id = 2; // Same as that in InnerTask
    TaskStatus status = 3;
    bytes result = 4;
};

enum TaskStatus {
    SUCCESS = 0;
    FAILED = 1;
};

service Dispatcher {
    rpc GetTask(GetTaskRequest) returns (TaskWrapper);
    rpc SendResult(SendResultRequest) returns (google.protobuf.Empty);
};